--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -7,7 +7,14 @@ body, label, .checkbox label {
 	font-weight: 300;
 }
 
-.navbar-nav > li > a {
-	top: 70px;
-	margin-left: 180px;
+// MASTER PAGE STYLES
+
+//.navbar-nav > li > a {
+//	top: 70px;
+//	margin-left: 180px;
+//	font-size: 24px;
+//}
+
+#PDCLogo {
+	height: 150px;
 }
