--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,20 +1,40 @@
 @import "bootstrap/bootstrap";
+@import "fontawesome/font-awesome";
 
-@btn-font-weight: 300;
-@font-family-sans-serif: "Roboto", Helvetica, Arial, sans-serif;
-
-body, label, .checkbox label {
-	font-weight: 300;
+.navbar-nav {
+	margin-left: 95px;
 }
 
-// MASTER PAGE STYLES
-
-//.navbar-nav > li > a {
-//	top: 70px;
+.navbar-nav > li > a {
+	padding-top: 150px;
+	padding-bottom: 0px;
 //	margin-left: 180px;
-//	font-size: 24px;
-//}
+	font-size: 18px;
+}
+
+.panel-heading {
+	font-size: 18px;
+}
 
 #PDCLogo {
 	height: 150px;
+}
+
+.hvr-grow {
+	display: inline-block;
+	vertical-align: middle;
+	-webkit-transform: translateZ(0);
+	transform: translateZ(0);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+	-webkit-transition-property: transform;
+	transition-property: transform;
+}
+.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
 }
