--- a/resources/assets/less/bootstrap/navbar.less
+++ b/resources/assets/less/bootstrap/navbar.less
@@ -163,7 +163,8 @@
 
 .navbar-brand {
   float: left;
-  padding: 25px 25px;//@navbar-padding-vertical @navbar-padding-horizontal;
+  padding: 25px 40px;
+  //@navbar-padding-vertical @navbar-padding-horizontal;
   font-size: @font-size-large;
   line-height: @line-height-computed;
   height: @navbar-height;
@@ -431,8 +432,8 @@
       &,
       &:hover,
       &:focus {
-        color: @navbar-default-link-disabled-color;
-        background-color: @navbar-default-link-disabled-bg;
+        //color: @navbar-default-link-disabled-color;
+        //background-color: @navbar-default-link-disabled-bg;
       }
     }
   }
@@ -460,8 +461,8 @@
       &,
       &:hover,
       &:focus {
-        background-color: @navbar-default-link-active-bg;
-        color: @navbar-default-link-active-color;
+        //background-color: @navbar-default-link-active-bg;
+        //color: @navbar-default-link-active-color;
       }
     }
 
