--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8409,5 +8409,35 @@ button.close {
 .hvr-grow:active {
   transform: scale(1.1);
 }
+#pinBoot {
+  position: relative;
+  max-width: 100%;
+  width: 100%;
+}
+.pinImg {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
+.pin-panel {
+  position: absolute;
+  background: white;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+  padding: 10px;
+}
+/*
+stylize any heading tags withing pin-panel below
+*/
+.pin-panel h1 {
+  font-size: 1em;
+}
+.pin-panel h1 a {
+  color: #A92733;
+}
+.pin-panel:hover {
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+  margin-top: -5px;
+  transition: all 0.3s ease-in-out;
+}
 
 /*# sourceMappingURL=app.css.map */
